--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,9 @@
 <header class="header">
   <div class="container">
-    
+    <ul>
+      <li><a href="">link1</a></li>
+      <li><a href="">link2</a></li>
+      <li><a href="">link3</a></li>
+    </ul>
   </div>
 </header>
