--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,7 @@
-<section class="">
-    <div class="container"></div>
+<section class="hero">
+    <div class="container">
+        <h1 class="hero-title">hello</h1>
+        <p class="hero-text">hero</p>
+
+    </div>
 </section>
