add about section

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,3 +1,10 @@
-<section class="section">
-    <div class="container"></div>
+<section class="section about">
+  <div class="container">
+    <h2 class="about-title">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla labore
+      nobis reiciendis iure. Magnam alias id nisi enim voluptates, vero iusto
+      consequatur minus neque similique assumenda repudiandae maiores possimus
+      est.
+    </h2>
+  </div>
 </section>
