--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,10 @@
 <footer class="footer">
   <div class="container">
-    
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui dolor
+      doloribus maiores, eveniet officia reprehenderit nostrum quae ad excepturi
+      quasi, tempore fugit laboriosam ut accusamus voluptas nisi id consectetur
+      rem!
+    </p>
   </div>
 </footer>
